// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Disabled Tooltip 1`] = `
<WithStyles(ForwardRef(Paper))
  className="paper"
  elevation={2}
  square={true}
>
  <WithStyles(ForwardRef(IconButton))
    className="inputButton"
    color="primary"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    size="small"
  >
    <SearchIcon />
  </WithStyles(ForwardRef(IconButton))>
</WithStyles(ForwardRef(Paper))>
`;

exports[`Snapshot Testing Optional Props 1`] = `
<WithStyles(ForwardRef(Paper))
  className="paper"
  elevation={5}
  square={true}
>
  <Memo()
    placement="bottom"
    title="tooltip"
  >
    <WithStyles(ForwardRef(IconButton))
      className="inputButton"
      color="primary"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      size="small"
    >
      <SearchIcon />
    </WithStyles(ForwardRef(IconButton))>
  </Memo()>
</WithStyles(ForwardRef(Paper))>
`;

exports[`Snapshot Testing Required Props 1`] = `
<WithStyles(ForwardRef(Paper))
  className="paper"
  elevation={2}
  square={true}
>
  <Memo()
    placement="top"
    title="Click Me"
  >
    <WithStyles(ForwardRef(IconButton))
      className="inputButton"
      color="primary"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      size="small"
    >
      <SearchIcon />
    </WithStyles(ForwardRef(IconButton))>
  </Memo()>
</WithStyles(ForwardRef(Paper))>
`;
